First part of the tutorial and installation